LUNES NOCHE CASI FINAL

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,8 +34,17 @@ h2{
     margin-top: 5px;
 }
 h3{
+   
     font-size: 4.5vmin;
     margin-left: 50px;
+}
+h4{
+    color: aliceblue;
+    font-size: 3vmin;
+}
+h5{
+    color: aliceblue;
+    font-size: 3.5vmin;
 }
 p{
     
@@ -94,16 +103,22 @@ p{
 
 .container{
     display: grid;
+   
     justify-content: center;
-    padding: 10px;
+   
     align-items: center;
     width: 80%;
     height: auto;
     border-radius: 10px;
-    
+    padding: 50px 150px 100px 150px;
     backdrop-filter: blur(20px);
     border: 2px solid rgba(255, 255, 255, 0.429);
     
+}
+.label{
+    display: flex;
+    justify-content: start;
+    margin-left: 10px;
 }
 section{
     display: flex;
@@ -114,6 +129,10 @@ section{
 .p-button{
     width: auto;
     margin: 25px;
+    
+}
+.reservaCorrecta p{
+    color: rgb(233, 231, 255);
 }
 
 .p-button :hover{
@@ -121,19 +140,38 @@ section{
     margin: 2px;
 }
 .p-datatable{
+   margin-bottom: 100px;
+   margin-top: 100px;
+}
+.tabla{
     margin-bottom: 100px;
 }
 th{
-    background-color: rgba(81, 90, 122, 0.242);
-    backdrop-filter: blur(10px);
+    background-color: rgba(81, 90, 122, 0.527);
+    backdrop-filter: blur(20px);
    color: rgb(255, 255, 255);
-
+   padding: 15px;
+   font-size: 2vmin;
 }
+
 td{
-    background-color: rgba(255, 255, 255, 0.178);
-    backdrop-filter: blur(10px);
+   padding: 15px 0px 15px 5px;
+    font-size: 2vmin;
+ 
+    background-color: rgba(255, 255, 255, 0.589);
+    backdrop-filter: blur(20px);
 
 }
+td a{
+    background-color: rgba(255, 0, 0, 0.712);
+    backdrop-filter: blur(20px);
+    padding: 5px;
+    text-decoration: none;
+    border-radius: 5px;
+    color: white;
+
+}
+
 .p-column-title{
     font-size: 2.3vmin;
 }
@@ -147,7 +185,11 @@ label{
     color: rgb(33, 33, 33);
     font-size: 2vmin;
 }
-.inputs{
+
+.p-button-icon{
+    padding-inline: 10px;
+}
+.input{
     width: 100%;
 }
 input{
@@ -167,6 +209,10 @@ a :after{
 }
 .p-button-label{
     font-size: 2.5vmin ;
+}
+
+.botonesReserva{
+    margin-inline: 100px;
 }
 
 @media screen and (max-width:700px){
