--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,7 +25,7 @@ position: absolute;
     color: rgb(241, 57, 57);
     font-size: 7vmin;
  
-   
+    text-shadow:  -3px 4px 5px  rgba(0, 0, 0, 0.998);
     
     
   }
@@ -56,7 +56,8 @@ h4{
 }
 h5{
     color: aliceblue;
-    font-size: 3.5vmin; text-shadow: 1px 1px 0 #040404, -1px -1px 0 #000000, 1px -1px 0 #212121, -1px 1px 0 #252323;
+    font-size: 3.5vmin;
+     text-shadow: 1px 1px 0 #040404, -1px -1px 0 #000000, 1px -1px 0 #212121, -1px 1px 0 #252323;
 }
 p{
     
@@ -121,6 +122,7 @@ p{
   z-index: -1;
 }
 
+
 @media screen and (max-width:825px){
   
    
@@ -146,9 +148,9 @@ p{
     
 }
 .error img{
-    margin-inline: 20px;
+  
     height: 700px;
-    width: 100%;
+    width: 75%;
 }
 .error{
     background-color: rgb(244, 251, 250);
@@ -157,6 +159,7 @@ p{
     display: flex;
     justify-content: start;
     margin-left: 10px;
+    text-shadow:  -1px 1px 1px  rgba(255, 255, 255, 0.998);
 }
 section{
     display: flex;
@@ -180,6 +183,7 @@ section{
 .p-datatable{
    margin-bottom: 100px;
    margin-top: 100px;
+   width: 100%;
 }
 .tabla{
     margin-bottom: 100px;
@@ -193,7 +197,7 @@ th{
 }
 
 td{
-   padding: 15px 0px 15px 5px;
+   padding: 15px 0px 15px 15px;
     font-size: 2vmin;
  
     background-color: rgba(255, 255, 255, 0.589);
@@ -211,7 +215,9 @@ td a{
 }
 
 .p-column-title{
+
     font-size: 2.3vmin;
+   
 }
 .p-float-label{
     font-size: 2.5vmin;
@@ -223,7 +229,8 @@ td a{
     display: flex;
     justify-content: start;
     margin-left: 10px;
-
+    text-shadow: -1px 1px 1px  rgba(255, 255, 255, 0.998);
+   
 }
 .p-inputtext{
     margin-top: 15px;
@@ -298,6 +305,10 @@ video{
         height: 100%;
     }
 
+    .p-datatable{
+       display: grid;
+        width: 100%;
+     }
     
 }
 @media screen and (max-width:400px){
