--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -239,7 +239,7 @@ td a{
 .p-float-label label {
     position: absolute;
     pointer-events: none;
-   
+    text-shadow: -1px 1px 1px  rgba(255, 255, 255, 0.998);
     margin-top: -0.1rem;
     transition-property: all;
     transition-timing-function: ease;
